<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SSPIA</string>
    <string name="title_app">Solar System Planets Information App</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="drawer_open">Solar System</string>
    <string name="drawer_close"></string>
    <string name="defaulttype">default</string>
    <string name="customtype">custom</string>
    <string name="marsinfo1">Notifications</string>
    <string name="marsinfo2">Notify me when mars temperature is in this range:</string>
    <string name="tempmax">Max.</string>
    <string name="tempmin">Min.</string>
    <string name="info_title">Developers</string>
    <string name="info_first">Alexey Evdokimov</string>
    <string name="info_second">José Quintero</string>
    <string name="info_third">Daniel Martínez</string>
    <string name="info_email">sspiateam@gmail.com</string>
    <string name="info_app">The temperatures are approximate. Calculation based on minimum and maximum values. Sources:</string>
    <string name="link_nasa">pds.jpl.nasa.gov/planets/special/planets.htm</string>
    <string name="others">and others.</string>
    <string name="servicename">sspiaservice</string>
    <string name="version">0.1.6.1</string>
    <string name="loading">Loading first start.</string>
    <string name="created">Created for Nasa Space apps challenge.</string>
    
    <string name="sat_infotab">Notable Satellites</string>
    
    <string-array name="fromcuriositi">
        <item >"terrestrial_date"</item>
        <item >"sol"</item>
        <item >"ls"</item>
        <item >min_temp</item>
        <item >min_temp_fahrenheit</item>
        <item >max_temp</item>
        <item >max_temp_fahrenheit</item>
        <item >pressure</item>
        <item >pressure_string</item>
        <item >abs_humidity</item>
        <item >wind_speed</item>
        <item >wind_direction</item>
        <item >atmo_opacity</item>
        <item >season</item>
        <item >sunrise</item>
        <item >sunset</item>	
    </string-array>
    
    <string-array name="addmars">
        <item >ice_recov</item>
        <item >planet_type</item>
    </string-array>

</resources>
