<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/z_customback_moondialog"
    android:paddingBottom="10dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/info_title"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/dividerhori"
        style="@style/horizontalline"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="14dp"
        android:background="#ffffff"
        android:shadowColor="#101010"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dividerhori"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="20dp"
        android:text="@string/info_first"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="17sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:paddingTop="5dp"
        android:text="@string/info_second"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="17sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:paddingTop="5dp"
        android:text="@string/info_third"
        android:textColor="@android:color/holo_green_light"
        android:textSize="17sp"
        android:textStyle="bold"
        android:typeface="sans" />
    
     <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView02"
        android:layout_marginTop="23dp"
        android:text="@string/info_app"
        android:textColor="@android:color/secondary_text_dark_nodisable"
        android:textSize="15sp"
        android:typeface="monospace" />
     
      <TextView
        android:id="@+id/TextView06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView05"
        android:text="@string/link_nasa"
        android:autoLink="web"
        android:textColor="@android:color/secondary_text_dark_nodisable"
        android:textSize="15sp"
        android:typeface="monospace" />
      
      <TextView
        android:id="@+id/TextView07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView06"
        android:text="@string/others"
        android:textColor="@android:color/secondary_text_dark_nodisable"
        android:textSize="15sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView07"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:autoLink="email"
        android:text="@string/info_email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/TextView01"
        android:paddingRight="20dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="30sp" />

</RelativeLayout>
